Ajustes nos templates

--- a/app/templates/lista-pedidos.html
+++ b/app/templates/lista-pedidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Pedidos</title>
+    <title>Meus Pedidos de Autorização</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -176,7 +176,9 @@
     <a href="/lista-pedidos"><button type="button">Limpar Filtros</button></a>
 </form>
 
-    <h1>Lista de Pedidos de Autorização</h1>
+<h2><a href="/formulario-pedido">Cadastrar novo pedido de autorização</a></h2><br><br>
+
+    <h1>Meus Pedidos de Autorização</h1>
 
     <table>
         <thead>
