--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedido de Autorização</title>
+    <title>Cadastrar pedido de Autorização</title>
 
 <style>
     body {
@@ -117,7 +117,7 @@
 
 
 <div class="container">
-    <h1>Pedido de Autorização</h1>
+    <h1>Cadastrar Pedido de Autorização</h1>
     <form id="pedido-form">
         <label>Nome da Empresa:</label>
         <input type="text" id="nome_empresa" value="Empresa Teste" required>
@@ -143,7 +143,7 @@
         <label>Número do Certificado de Livre Prática:</label>
         <input type="text" id="num_certificado_livre_pratica" value="12345" required>
 
-        <button type="button" onclick="enviarPedido()">Enviar Pedido</button>
+        <button type="button" onclick="enviarPedido()">Enviar Pedido de Autorização</button>
     </form>
 
     <p id="mensagem"></p>
